--- a/order.html
+++ b/order.html
@@ -97,6 +97,8 @@
 				<script>
 					changeImage(0);
 				</script>
+				
+				<onclick="button" type="submit"></onclick>
 		</form>
 	</div>
   </body>
